# knowledge-source-triage-bot

./: .env.example  .gitignore  README.md  claude.md  main.py  pyproject.toml  requirements.txt  session-log.jsonl
.github/workflows/: ci.yml  deploy.yml
bot/: config.py
bot/analyzer/: extractor.py  json_utils.py  pipeline.py  prompts.py
bot/fetcher/: article.py  github.py  playwright.py  twitter.py
bot/notion/: projects.py  references.py  writer.py
bot/telegram/: formatter.py  handler.py
docs/: CONTRIBUTING.md  ENV.md  RUNBOOK.md
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  data.md  dependencies.md
docs/brainstorms/: 2026-04-10-remove-phase2-add-override-requirements.md
docs/ideation/: 2026-04-10-reduce-false-rejections-ideation.md
docs/plans/: 2026-03-01-ai-knowledge-triage-design.md  2026-04-04-f2-github-link-extraction.md  2026-04-04-phase-11-cross-referencing.md  2026-04-10-001-refactor-remove-phase2-add-accept-override-plan.md
scripts/: backfill_references.py
systemd/: triage-bot.service
tasks/: ISSUES.md  lessons.md  todo.md
tests/: conftest.py  test_accept_handler.py  test_extractor.py  test_formatter.py  test_pipeline.py  test_pipeline_discovery.py  test_references.py  test_twitter.py
